--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
     <!-- header -->
     <header class="header">
       <img src="./images/header-logo.svg" alt="Логотип" class="header__logo">
-      <div class="header__languages">
-        <a href="#" class="header__lang-link header__lang-link_selected">
-          Ru
-        </a>
-        <a href="#" class="header__lang-link">
-          En
-        </a>
-      </div>
+      <ul class="header__languages">
+        <li>
+          <a href="#" class="header__lang-link header__lang-link_selected">
+            Ru
+          </a>
+        </li>
+        <li>
+          <a href="#" class="header__lang-link">
+            En
+          </a>
+        </li>
+      </ul>
     </header>
     <!-- основное содержимое страницы -->
     <main class="content">
@@ -29,9 +33,12 @@
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а здесь.
         </p>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Ваша полка - верхняя">
-        <p class="lead__caption">Ваша полка — верхняя</p>
+        <figure class="lead__cover">
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="Ваша полка - верхняя">
+          <figcaption class="lead__caption">Ваша полка — верхняя</figcaption>
+        </figure>
       </section>
+
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">
@@ -46,11 +53,11 @@
           места, достойные вашего отпуска.
         </p>
         <ul class="intro__list">
-          <li class="intro__list-item">Часовых поясов 11</li>
-          <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-          <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-          <li class="intro__list-item">Природных заповедников 105</li>
-          <li class="intro__list-item">Аэропортов 241</li>
+          <li class="intro__list-item"><span class="intro__span-accent">Часовых поясов </span>11</li>
+          <li class="intro__list-item"><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО </span>12</li>
+          <li class="intro__list-item"><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО </span>16</li>
+          <li class="intro__list-item"><span class="intro__span-accent">Природных заповедников </span>105</li>
+          <li class="intro__list-item"><span class="intro__span-accent">Аэропортов </span>241</li>
         </ul>
       </section>
       <ul class="photo-grid">
@@ -193,16 +200,19 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer">
-      <ul class="footer__links">
-        <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-        <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-        <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-        <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-        <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
-      </ul>
-      <p class="footer__copyright">&#169; 2022. Владимир Казанцев</p>
-    </footer>
+    <nav class="navigation">
+      <footer class="footer">
+        <ul class="footer__links">
+          <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+          <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+          <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+          <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+          <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+        </ul>
+        <p class="footer__copyright">&#169; 2022. Владимир Казанцев</p>
+      </footer>
+    </nav>
   </div>
 </body>
+
 </html>
