--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
         </p>
         <ul class="intro__list">
           <li class="intro__list-item"><span class="intro__span-accent">Часовых поясов </span>11</li>
-          <li class="intro__list-item"><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО </span>12</li>
-          <li class="intro__list-item"><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО </span>16</li>
+          <li class="intro__list-item"><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО </span>12
+          </li>
+          <li class="intro__list-item"><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО </span>16
+          </li>
           <li class="intro__list-item"><span class="intro__span-accent">Природных заповедников </span>105</li>
           <li class="intro__list-item"><span class="intro__span-accent">Аэропортов </span>241</li>
         </ul>
@@ -200,8 +202,8 @@
       </section>
     </main>
     <!-- footer -->
-    <nav class="navigation">
-      <footer class="footer">
+    <footer class="footer">
+      <nav class="navigation">
         <ul class="footer__links">
           <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
           <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
@@ -210,8 +212,9 @@
           <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
         </ul>
         <p class="footer__copyright">&#169; 2022. Владимир Казанцев</p>
-      </footer>
-    </nav>
+      </nav>
+    </footer>
+
   </div>
 </body>
 
